[project]
name = "flag-carrier"
version = "0.1.0"
description = "Daily European flag quiz for the stand-up, departures-board style"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "tzdata>=2024.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
